added enhanced ai features, enhanced linter and validation rules